refactor(friends): back FriendManager with FriendsDao and lazy hydration